# sni-spoof

./: Cargo.toml  README.md  config.json
.cargo/: config.toml
.github/workflows/: build.yml
src/: config.rs  connection.rs  main.rs  net.rs  proxy.rs  tls.rs
src/injector/: linux.rs  logic.rs  mod.rs  packet.rs  windows.rs
