[package]
name = "sni-spoof"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
anyhow = "1.0.102"
rand = "0.10.1"
socket2 = "0.6.4"

[target.'cfg(windows)'.dependencies]
windivert = "0.6.0"
windivert-sys = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
nfq = "0.2.5"
pnet = "0.35.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1